--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "framer-motion": "^12.16.0",
     "lucide-react": "^0.514.0",
     "next": "15.3.3",
+    "next-themes": "^0.4.6",
     "postgres": "^3.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
