--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@trpc/client": "^11.3.1",
     "@trpc/react-query": "^11.3.1",
     "@trpc/server": "^11.3.1",
+    "@types/js-cookie": "^3.0.6",
     "@types/react-router-dom": "^5.3.3",
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.35.0",
@@ -44,6 +45,7 @@
     "date-fns-tz": "^3.2.0",
     "drizzle-orm": "^0.44.2",
     "framer-motion": "^12.16.0",
+    "js-cookie": "^3.0.5",
     "katex": "^0.16.22",
     "lucide-react": "^0.514.0",
     "next": "15.3.3",
@@ -57,6 +59,7 @@
     "rehype-katex": "^7.0.1",
     "remark-gfm": "^4.0.1",
     "remark-math": "^6.0.0",
+    "resumable-stream": "^2.2.0",
     "server-only": "^0.0.1",
     "superjson": "^2.2.2",
     "tailwind-merge": "^3.3.1",
