--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "superjson": "^2.2.2",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
+    "use-context-selector": "^2.0.0",
     "uuid": "^11.1.0",
     "zod": "^3.25.60"
   },
