--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.3.22",
+    "@ai-sdk/provider-utils": "^2.2.8",
     "@ai-sdk/react": "^1.2.12",
+    "@ai-sdk/ui-utils": "^1.2.11",
+    "@number-flow/react": "^0.5.10",
     "@openrouter/ai-sdk-provider": "^0.7.2",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-avatar": "^1.1.10",
