--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@ai-sdk/provider-utils": "^2.2.8",
     "@ai-sdk/react": "^1.2.12",
     "@ai-sdk/ui-utils": "^1.2.11",
+    "@neondatabase/serverless": "^1.0.1",
     "@number-flow/react": "^0.5.10",
     "@openrouter/ai-sdk-provider": "^0.7.2",
     "@radix-ui/react-alert-dialog": "^1.1.14",
@@ -53,7 +54,6 @@
     "lucide-react": "^0.514.0",
     "next": "15.3.3",
     "next-themes": "^0.4.6",
-    "postgres": "^3.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-intersection-observer": "^9.16.0",
