--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-intersection-observer": "^9.16.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.6.2",
+    "react-shallow-store": "^0.2.0",
     "react-syntax-highlighter": "^15.6.1",
     "redis": "^5.5.6",
     "rehype-katex": "^7.0.1",
@@ -69,7 +70,6 @@
     "superjson": "^2.2.2",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
-    "use-context-selector": "^2.0.0",
     "uuid": "^11.1.0",
     "zod": "^3.25.60"
   },
